--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,4 +1,6 @@
-<!doctype html>
+{# la variable Twig "route" contiendra le nom de la route actuellement chargée #}
+{% set route = app.request.attributes.get('_route') %}
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -16,6 +18,9 @@
     {% block css %}{% endblock %}
 </head>
 <body>
+
+    {# Inclusion du menu principal du site #}
+    {% include 'partials/_main_navbar.html.twig' %}
 
     {# Bloc pour afficher le contenu des pages #}
     {% block body %}{% endblock %}
