Ajout pages erreurs HTTP

--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,4 +1,4 @@
-{# Utilsation du squelette de page base.html.twig #}
+{# Utilisation du squelette de page base.html.twig #}
 {% extends "base.html.twig" %}
 
 {# Titre de la page #}
