ajout d'une page de profil

--- a/templates/partials/_main_navbar.html.twig
+++ b/templates/partials/_main_navbar.html.twig
@@ -40,7 +40,7 @@
                         {# Texte du bouton du menu déroulant #}
                         <a class="nav-link dropdown-toggle text-light" href="#" id="profil-dropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             {# Affichage du pseudonyme de l'utilisateur connecté #}
-                            <i class="fas fa-user mx-1"></i>XXXXXXXX
+                            <i class="fas fa-user mx-1"></i>{{ app.user.pseudonym }}
                         </a>
 
                         {# Liste des liens du menu déroulant #}
