ajout d'un formulaire

--- a/templates/blog/new_publication.html.twig
+++ b/templates/blog/new_publication.html.twig
@@ -15,8 +15,12 @@
             <h1 class="col-12 text-center my-5">Nouvelle Publication</h1>
         </div>
 
+        {# Affichage du formulaire #}
         <div class="row">
-            <div class="col-12 col-md-4 mx-auto">
+
+            <div class="col-12 col-md-8 mx-auto">
+
+                {# Affichage du formulaire de création d'article #}
                 {{ form( newArticleForm ) }}
             </div>
 
