Ajout page création d'article

--- a/templates/blog/new_publication.html.twig
+++ b/templates/blog/new_publication.html.twig
@@ -21,7 +21,7 @@
             <div class="col-12 col-md-8 mx-auto">
 
                 {# Affichage du formulaire de création d'article #}
-                {{ form( newArticleForm ) }}
+                {{ form( new_publication_form ) }}
             </div>
 
         </div>
