Ajout captcha page inscription

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,7 @@
     {% block body %}{% endblock %}
 
     {# Inclusion JS Bootstrap #}
-    <script src="{{ asset('js/bootstrap.bundle.min.js') }}">
+    <script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
     {# Bloc pour afficher des fichiers JS additionnels #}
     {% block js %}{% endblock %}
 </body>
